<resources>
    <string name="app_name">ReviewZ</string>
    <string name="popular">Popular</string>
    <string name="view_all">View all</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="minutes"> minutes</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="releasedate">ReleaseDate:</string>
    <string name="rating">Rating:</string>
    <string name="runtime">Runtime:</string>
    <string name="budget">Budget:</string>
    <string name="revenue">Revenue:</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="tv_show">Tv Show</string>
    <string name="on_the_air">On The Air</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="popular_tv_shows">Popular Tv shows</string>
    <string name="top_rated_tv_shows">Top Rated Tv shows</string>
    <string name="on_the_air_tv_shows">On The Air Tv shows</string>
    <string name="similar_tv_shows">Similar Tv shows</string>
    <string name="first_season_release_date">First Season Release Date:</string>
    <string name="last_season_release_date">Last Season Release Date:</string>
    <string name="no_of_season">No of Season:</string>
    <string name="no_of_episode">No of Episode:</string>
    <string name="movie">Movie</string>
    <string name="search_something">Search something</string>
    <string name="seasons">Seasons</string>
    <string name="submit">Submit</string>
    <string name="retry">Retry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>